--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -56,7 +56,10 @@
 
       <%= f.input :contact_email, :label => 'Contact Email' %>
       <%= f.input :contact_phone, :label => 'Contact Phone' %>
-      <%= f.input :require_review, :as => :toggle, :label => 'Review Registrations', :hint => 'All new registrations become "Pending", waiting for approval' %>
+      <%= f.input :require_account, :as => :toggle_checked, :label => 'Require Account', :hint => 'Must have a user account to register - necessary for forum/blog access' %>
+      <%= f.input :require_address, :as => :toggle_checked, :label => 'Require Address', :hint => 'Address in profile must be filled out' %>
+      <%#= f.input :require_photo, :as => :toggle_checked, :label => 'Require Photo', :hint => 'A photo must be uploaded into profile' %>
+      <%= f.input :require_review, :as => :toggle_checked, :label => 'Review Registrations', :hint => 'All new registrations become "Pending", waiting for approval' %>
     <% end %>
     
     <%= submit_or_cancel :cancel_url => (@workshop.new_record? ? admin_workshops_url : admin_workshop_path(@workshop)) %>
