--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -2,7 +2,7 @@
   <%= render :partial => 'configuration_sidebar' %>
 <% end %>
 <%= render :partial => 'dm_cms/admin/shared/liquid_tags_ref' %>
-
+<% debugger %>
 <% submit_url = (@workshop.new_record? ? admin_workshops_path : admin_workshop_path) %>
 <%= simple_form_for(@workshop, :url => submit_url) do |f| %>
   <%= f.error_notification :message => "Please review the problems below"%>
