--- a/event/app/views/dm_event/registrations/new.html.erb
+++ b/event/app/views/dm_event/registrations/new.html.erb
@@ -4,9 +4,9 @@
   </div>
 
   <% unless @workshop.require_account && current_user.nil? %>
-    <%= simple_form_for(@registration, :url => register_create_url(@workshop)) do |f| %>
+    <%= simple_form_for(@registration, :url => register_create_url(@workshop, anchor: 'ticket_information')) do |f| %>
       <h3><%= I18n.t "ems.ticket_information" %></h3>
-      <div class="ticket_information">
+      <div id="ticket_information" class="ticket_information">
         <%= render :partial => 'section_prices', :locals => {:f => f} %>
       </div>
 
