--- a/event/app/assets/stylesheets/dm_event/admin.css
+++ b/event/app/assets/stylesheets/dm_event/admin.css
@@ -20,7 +20,7 @@
 .label-unconfirmed[href], .badge-unconfirmed[href] { background-color: #c0c700;}
 .label-suspended, .badge-suspended { background-color: #c0c700; }
 .label-suspended[href], .badge-suspended[href] { background-color: #c0c700;}
-.btn-pending { background-color: hsl(54, 85%, 31%) !important;
+.btn-pending, .progress-pending .bar, .progress .bar-pending { background-color: hsl(54, 85%, 31%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#edda2a", endColorstr="#92840b");
   background-image: -khtml-gradient(linear, left top, left bottom, from(#edda2a), to(#92840b));
@@ -44,7 +44,8 @@
 .reviewing_color { color: #838200;}
 .label-reviewing, .badge-reviewing { background-color: #838200; }
 .label-reviewing[href], .badge-reviewing[href] { background-color: #838200;}
-.btn-reviewing { background-color: hsl(73, 42%, 28%) !important;
+.btn-reviewing, .progress-reviewing .bar, .progress .bar-reviewing {
+  background-color: hsl(73, 42%, 28%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9db549", endColorstr="#586529");
   background-image: -khtml-gradient(linear, left top, left bottom, from(#9db549), to(#586529));
@@ -72,7 +73,7 @@
 .label-approved[href], .badge-approved[href] { background-color: #4a48ff;}
 .label-subscribed, .badge-subscribed { background-color: #4a48ff; }
 .label-subscribed[href], .badge-subscribed[href] { background-color: #4a48ff;}
-.btn-accepted { 
+.btn-accepted, .progress-accepted .bar, .progress .bar-accepted { 
   background-color: hsl(210, 79%, 30%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#197adb", endColorstr="#104c88");
@@ -99,7 +100,8 @@
 .label-paid[href], .badge-paid[href] { background-color: #049727;}
 .label-certified, .badge-certified { background-color: #049727; }
 .label-certified[href], .badge-certified[href] { background-color: #049727;}
-.btn-paid { background-color: hsl(110, 56%, 25%) !important;
+.btn-paid, .progress-paid .bar, .progress .bar-paid {
+  background-color: hsl(110, 56%, 25%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#47b332", endColorstr="#27631c");
   background-image: -khtml-gradient(linear, left top, left bottom, from(#47b332), to(#27631c));
@@ -123,7 +125,8 @@
 .waitlisted_color { color: #d38100;}
 .label-waitlisted, .badge-waitlisted { background-color: #d38100; }
 .label-waitlisted[href], .badge-waitlisted[href] { background-color: #d38100;}
-.btn-waitlisted { background-color: hsl(36, 100%, 35%) !important;
+.btn-waitlisted, .progress-waitlisted .bar, .progress .bar-waitlisted {
+  background-color: hsl(36, 100%, 35%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffa319", endColorstr="#b26b00");
   background-image: -khtml-gradient(linear, left top, left bottom, from(#ffa319), to(#b26b00));
@@ -147,7 +150,8 @@
 .canceled_color { color: #8d248f;}
 .label-canceled, .badge-canceled { background-color: #8d248f; }
 .label-canceled[href], .badge-canceled[href] { background-color: #8d248f;}
-.btn-canceled { background-color: hsl(0, 0%, 79%) !important;
+.btn-canceled, .progress-canceled .bar, .progress .bar-canceled {
+  background-color: hsl(0, 0%, 79%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fcfcfc", endColorstr="#c9c9c9");
   background-image: -khtml-gradient(linear, left top, left bottom, from(#fcfcfc), to(#c9c9c9));
@@ -172,7 +176,8 @@
 .label-rejected[href], .badge-rejected[href] { background-color: #d10029;}
 .label-unsubscribed, .badge-unsubscribed { background-color: #d10029; }
 .label-unsubscribed[href], .badge-unsubscribed[href] { background-color: #d10029;}
-.btn-rejected { background-color: hsl(0, 71%, 30%) !important;
+.btn-rejected, .progress-rejected .bar, .progress .bar-rejected {
+  background-color: hsl(0, 71%, 30%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#da2424", endColorstr="#821616");
   background-image: -khtml-gradient(linear, left top, left bottom, from(#da2424), to(#821616));
@@ -196,7 +201,8 @@
 .refunded_color { color: #b89ebc;}
 .label-refunded, .badge-refunded { background-color: #b89ebc; }
 .label-refunded[href], .badge-refunded[href] { background-color: #b89ebc;}
-.btn-refunded { background-color: hsl(312, 44%, 43%) !important;
+.btn-refunded, .progress-refunded .bar, .progress .bar-refunded {
+  background-color: hsl(312, 44%, 43%) !important;
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bb52a6", endColorstr="#9d3d8a");
   background-image: -khtml-gradient(linear, left top, left bottom, from(#bb52a6), to(#9d3d8a));
@@ -220,20 +226,21 @@
 .noshow_color { color: #444;}
 .label-noshow, .badge-noshow { background-color: #444; }
 .label-noshow[href], .badge-noshow[href] { background-color: #444;}
-.btn-noshow { background-color: hsl(0, 0%, 16%) !important;
-background-repeat: repeat-x;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5b5b5b", endColorstr="#282828");
-background-image: -khtml-gradient(linear, left top, left bottom, from(#5b5b5b), to(#282828));
-background-image: -moz-linear-gradient(top, #5b5b5b, #282828);
-background-image: -ms-linear-gradient(top, #5b5b5b, #282828);
-background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5b5b5b), color-stop(100%, #282828));
-background-image: -webkit-linear-gradient(top, #5b5b5b, #282828);
-background-image: -o-linear-gradient(top, #5b5b5b, #282828);
-background-image: linear-gradient(#5b5b5b, #282828);
-border-color: #282828 #282828 hsl(0, 0%, 11%);
-color: #fff !important;
-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
--webkit-font-smoothing: antialiased;
+.btn-noshow, .progress-noshow .bar, .progress .bar-noshow {
+  background-color: hsl(0, 0%, 16%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5b5b5b", endColorstr="#282828");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#5b5b5b), to(#282828));
+  background-image: -moz-linear-gradient(top, #5b5b5b, #282828);
+  background-image: -ms-linear-gradient(top, #5b5b5b, #282828);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5b5b5b), color-stop(100%, #282828));
+  background-image: -webkit-linear-gradient(top, #5b5b5b, #282828);
+  background-image: -o-linear-gradient(top, #5b5b5b, #282828);
+  background-image: linear-gradient(#5b5b5b, #282828);
+  border-color: #282828 #282828 hsl(0, 0%, 11%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+  -webkit-font-smoothing: antialiased;
 }
 .btn-noshow .caret { border-top-color: #fff; border-bottom-color: #fff; }
 .btn-noshow:active, .btn-noshow.active, .btn-group.open .btn-noshow.dropdown-toggle {
