--- a/forum/app/views/dm_forum/admin/forum_categories/edit.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_categories/edit.html.erb
@@ -1,2 +1,3 @@
+<% content_for :content_title, icon_label('font-comments', @forum_category.name) %>
 <% @title = 'Edit Forum Category' %>
 <%= render 'form' %>
