added price column

--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -6,6 +6,7 @@
           <th width=20></th>
           <th width=50>Receipt</th>
           <th>Name</th>
+          <th width=25>Price</th>
           <th width=75>Date</th>
         </tr>
       </thead>
