--- a/event/app/views/dm_event/admin/workshops/index.html.erb
+++ b/event/app/views/dm_event/admin/workshops/index.html.erb
@@ -1,25 +1,76 @@
-<% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), new_admin_workshop_path, :title => 'New Workshop', :class => "nav-btn-primary") ]) %>
-<%= content_frame :title => 'Workshops', :toolbar => toolbar do %>
-  <div class="table-overflow">
-    <table class="table table-striped table-bordered table-block">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th width="150">Date</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @workshops.each do |workshop| %>
-          <% present workshop do |workshop_presenter| %>
-            <tr class="item" data-item_id="<%= workshop.id %>">
-              <td>
-                <%= link_to workshop.title, [:admin, workshop] %>
-              </td>
-              <td><%= workshop_presenter.start_end_date %></td>
-            </tr>
-          <% end %>
-        <% end %>
-      </tbody>
-    </table>
+<% content_for :content_title_extra do %>
+  <div class='navbar'><ul class='nav pull-right'>
+    <li><%= link_to(icon_label('icon-plus', 'New'), new_admin_workshop_path, :title => 'New Workshop', :class => "nav-btn-primary") %></li>
+  </ul></div>
+<% end %>
+
+<% @workshops.in_groups_of(2, false) do |workshop_row| %>
+  <div class="row-fluid">
+    <% for workshop in workshop_row  %>
+      <%= content_box title: link_to(workshop.title, [:admin, workshop]), toolbar: "<span class='label label-info pull-right'>#{present(workshop).start_end_date}</span>", class: 'span6' do %>
+        <% num_registrations = workshop.registrations.count %>
+        <ul class="block progress-statistics">
+          <% num = workshop.registrations.number_of(:attending) %>
+          <li><%= slim_progress_bar(label: 'Attending', value: "#{num} / #{num.percent_of(num_registrations).to_s}%", color: 'success', percentage: num.percent_of(num_registrations)) %></li>
+        </ul>
+        <div class="row-fluid">
+          <div class="span6">
+            <div class="block well progress-statistics">
+              <div class="body">
+                <% num = workshop.registrations.number_of(:accepted) %>
+                <%= slim_progress_bar(label: 'Accepted', value: "#{num}", color: 'accepted', percentage: num.percent_of(num_registrations)) %>
+                <% num = workshop.registrations.number_of(:paid) %>
+                <div class="semi-block">
+                  <%= slim_progress_bar(label: 'Paid', value: "#{num}", color: 'paid', percentage: num.percent_of(num_registrations)) %>
+                </div>
+                <% num = workshop.registrations.number_of(:pending) %>
+                <div class="semi-block">
+                  <%= slim_progress_bar(label: 'Pending', value: "#{num}", color: 'pending', percentage: num.percent_of(num_registrations)) %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="span6">
+            <div class="block well progress-statistics">
+              <div class="body">
+                <% num = workshop.registrations.number_of(:waitlisted) %>
+                <%= slim_progress_bar(label: 'Waitlisted', value: "#{num}", color: 'waitlisted', percentage: num.percent_of(num_registrations)) %>
+                <% num = workshop.registrations.number_of(:reviewing) %>
+                <div class="semi-block">
+                  <%= slim_progress_bar(label: 'Reviewing', value: "#{num}", color: 'reviewing', percentage: num.percent_of(num_registrations)) %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   </div>
+<% end %>
+
+<% unless @workshops_past.empty? %>
+  <%= content_frame :title => 'Past Workshops' do %>
+    <div class="table-overflow">
+      <table class="table table-striped table-bordered table-block">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th width="150">Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @workshops_past.each do |workshop| %>
+            <% present workshop do |workshop_presenter| %>
+              <tr class="item" data-item_id="<%= workshop.id %>">
+                <td>
+                  <%= link_to workshop.title, [:admin, workshop] %>
+                </td>
+                <td><%= workshop_presenter.start_end_date %></td>
+              </tr>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% end %>
 <% end %>
