--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -24,6 +24,7 @@
   <ul class="navigation-light block">
     <li><%= link_to 'Edit Workshop', edit_admin_workshop_url(@workshop) %></li>
     <li><%= link_to 'New Registration', register_new_url(@workshop), :targe => '_blank' %></li>
+    <li><%= link_to 'Export Registrations (.csv)', admin_workshop_url(@workshop, :format => 'csv') %></li>
   </ul>
 
 <% end %>
