--- a/event/app/views/dm_event/registrations/_section_address.html.erb
+++ b/event/app/views/dm_event/registrations/_section_address.html.erb
@@ -8,9 +8,9 @@
       <%= builder.input :first_name, :label => I18n.t('ems.registration_first_name'), :required => true %>
       <%= builder.input :last_name, :label => I18n.t('ems.registration_last_name'), :required => true %>
       <%= builder.input :address, :label => I18n.t('ems.registration_address'), :required => true %>
-      <%= builder.input :address2, :label => I18n.t('ems.registration_address2'), :required => true %>
+      <%= builder.input :address2, :label => I18n.t('ems.registration_address2') %>
       <%= builder.input :city, :label => I18n.t('ems.registration_city'), :required => true %>
-      <%= builder.input :state, :label => I18n.t('ems.registration_state'), :required => true %>
+      <%= builder.input :state, :label => I18n.t('ems.registration_state') %>
       <%= builder.input :zipcode, :label => I18n.t('ems.registration_zipcode'), :required => true %>
       <%= builder.input :country_id, :collection => ut_country_select_collection(false), :label => I18n.t('ems.registration_country'), :required => true %>
       <%= builder.input :address_required, :as => :hidden %>
