--- a/cms/app/views/dm_cms/admin/shared/_liquid_tags_ref.html.erb
+++ b/cms/app/views/dm_cms/admin/shared/_liquid_tags_ref.html.erb
@@ -1,5 +1,5 @@
 <% content_for :sidebar do %>
-  <div class="tagsinput">
+  <div class="tagsinput block">
     <p>List of available tags<br><small><em>click for details</em></small></p>
     <% Liquid::Template.tags.sort.each do |tag, tag_class| %>
       <% unless tag_class.details[:summary].blank? %>
