--- a/cms/app/views/layouts/email_templates/dm_cms_post_notify.text.erb
+++ b/cms/app/views/layouts/email_templates/dm_cms_post_notify.text.erb
@@ -1,6 +1,6 @@
-A new post has been published for the blog: '<%= @blog_title %>'
+<%= I18n.t 'cms.blog_notify_new_post' %>: '<%= @blog_title %>'
 
-Read full post: <%= @post_link %>
+<%= I18n.t 'cms.blog_notify_read_post' %>: <%= @post_link %>
 
 <%= @post_title %>
 
