--- a/core/app/views/dm_core/admin/accounts/_form.html.erb
+++ b/core/app/views/dm_core/admin/accounts/_form.html.erb
@@ -23,7 +23,8 @@
       <%= f.input :preferred_smtp_user_name, :label => 'SMTP Username', :required => true %>
       <%= f.input :preferred_smtp_password, :as => :password, :label => 'SMTP Password' %>
       <%= f.input :preferred_smtp_domain, :label => 'SMTP Domain' %>
-      <%= f.input :preferred_smtp_from_email, :label => 'SMTP From Email', :required => true, :hint => 'from address set on emails' %>
+      <%= f.input :preferred_smtp_from_email, :label => 'SMTP From/Reply Email', :required => true, :hint => 'from/reply address set on standard system emails' %>
+      <%= f.input :preferred_blog_from_email, :label => 'Blog From/Reply Email', :hint => 'from/reply address set on blog notification emails' %>
       <%= f.input :preferred_mailchimp_api_key, :label => 'MailChimp API Key' %>
     <% end %>
 
