--- a/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
@@ -9,9 +9,11 @@
 <% end %>
 
 <div class="block well body">
-  <dl>
+  <dl class="dl-horizontal">
     <dt>Slug</dt>
     <dd><%= @blog.slug %></dd>
+    <dt>Commenting Allowed?</dt>
+    <dd><div class="checkbox on_off inline"><input type="checkbox" <%= 'checked="1"' if @blog.comments_allowed %> disabled="disabled" /></div></dd>
   </dl>
 
 </div>
