allow deleting of comments

--- a/cms/app/views/dm_cms/shared/_comment.html.erb
+++ b/cms/app/views/dm_cms/shared/_comment.html.erb
@@ -3,7 +3,11 @@
   <p class="comment_author"><%= truncate(present(comment).author, :length => 30) %></p>
   <p class="info">
     <%= format_datetime comment.created_at %>
-    <%= ' | '.html_safe + link_to(I18n.t 'cms.reply', '#reply') if comment.commentable.comments_allowed? && user_signed_in? %>
+    <%= ' | '.html_safe + link_to(I18n.t('cms.reply'), '#reply') if comment.commentable.comments_allowed? && user_signed_in? %>
+    <% if false #user_signed_in? && can?(:edit, comment) %>
+      | <%= link_to I18n.t('fms.admin.edit_post'), [commenting_on, :ajax_edit_comment, comment] %>
+    <% end %>
+    <%= ' | '.html_safe + link_to(I18n.t('cms.delete'), [commenting_on, :ajax_delete_comment, comment], method: :delete, confirm: 'Are you sure you wish to delete this comment?') if is_admin? %>
   </p>
   <div class="clearfix"></div>
   <div class="comment_text">
