--- a/cms/app/views/dm_cms/shared/_comment_form.html.erb
+++ b/cms/app/views/dm_cms/shared/_comment_form.html.erb
@@ -1,9 +1,9 @@
 <% if commenting_on.comments_allowed? %>
-  <div id="comment_reply_form" class="comment_reply_form">
+  <div id="reply" class="comment_reply_form">
     <%= simple_form_for :comment, url: [commenting_on, :ajax_add_comment] do |f| %>
       <%= f.input :body, :as => :text, :label => I18n.t('cms.comment_body'), 
                       :input_html => {:rows => 10} %>
-      <%= f.submit %>
+      <%= f.submit I18n.t('cms.comment_submit') %>
     <% end %>
   </div>
 <% end %>
