add in support for publish a workshop and closing it when the deadline it reached.

--- a/event/app/assets/stylesheets/dm_event/application.css
+++ b/event/app/assets/stylesheets/dm_event/application.css
@@ -61,3 +61,5 @@ width: auto;
 .receipt_section .ticket ul { list-style: none; position: relative; float: left; display: block; left: 50%; }
 .receipt_section .ticket ul li { position: relative;
   display: block; right: 50%; }
+
+.registration_closed h2 { margin-bottom: 20px;}
