--- a/event/app/views/dm_event/admin/workshops/_configuration_sidebar.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_configuration_sidebar.html.erb
@@ -1,7 +1,7 @@
 <% unless @workshop.new_record? %>
   <ul class="navigation-light block">
     <li><%= link_to "Workshop Prices".html_safe, admin_workshop_workshop_prices_path(@workshop) %></li>
-    <li><a href="#" title="" class="expand">Email Notifications<strong><%= @workshop.require_review? ? '5' : '4' %></strong></a>
+    <li><a href="#" title="" class="expand">Email Notifications<strong>5</strong></a>
       <ul>
         <li><%= link_to "Pending Email".html_safe, edit_system_email_admin_workshop_path(@workshop, :email_type => 'pending') %></li>
         <li><%= link_to "Accepted Email".html_safe, edit_system_email_admin_workshop_path(@workshop, :email_type => 'accepted') %></li>
