--- a/event/app/views/dm_event/admin/workshops/_form.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_form.html.erb
@@ -13,6 +13,7 @@
     <% end %>
 
     <%= well_frame do %>
+      <%= f.input :published, :as => :toggle_checked, :label => 'Publish', :hint => 'Make available for registrations' %>
       <%= f.input :country_id, :wrapper_html => { :class => 'searchDrop' }, :input_html => { :class => 'chosen_select' }, 
                   :collection => ut_country_select_collection, :label_method => lambda {|t| t[0]}, :value_method => lambda {|t| t[1]},
                   :label => "Country" %>
@@ -43,13 +44,15 @@
         <div class="clearfix"></div>
       </div>
       <div class="form-horizontal control-group string required workshop_ending_on">
-        <label class="string required control-label" for="workshop_ending_on">
-          <abbr title="required">*</abbr> Registration Deadline
+        <label class="string control-label" for="workshop_ending_on">
+          Deadline
         </label>
         <div class="controls">
           <ul class="dates-range no-append">
               <li><input name="workshop[deadline_on]" type="text" value="<%= @workshop.deadline_on.to_date unless @workshop.deadline_on.nil? %>" placeholder="Select date..." class="datepicker" ></li>
           </ul>
+          <div class="clearfix"></div>
+          <p class="help-block">Specify last day to allow registrations.  Leave blank for no deadline.</p>
         </div>
         <div class="clearfix"></div>
       </div>
