--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -1,3 +1,9 @@
+<% content_for :content_title_extra do %>
+  <div class='navbar'><ul class='nav pull-right'>
+    <%= present(@workshop).label_published %>
+  </ul></div>
+<% end %>
+
 <%= content_frame :title => 'Registrations' do %>
   <div class="table-overflow">
     <table id="registration_table" class="table table-striped table-bordered table-block" data-source="<%= dm_event.admin_workshop_url(@workshop) %>">
